# auto-bench

./: .gitignore  Makefile  README.md  packages.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: sync-to-hf-hub.yml
app/: app.py  setup.py  ui.py
autobench/: __init__.py  benchmark.py  benchmark_runner.py  compute_manager.py  config.py  data.py  data_builder.py  deploy.py  deployment.py  executor.py  k6.py  logging.py  logging_config.py  main.py  report.py  runner.py  scenario.py  scheduler.py  script.js  utils.py
autobench/templates/: k6_constant_arrival_rate.js.j2  main.js.j2
notebooks/: dev-load-test.ipynb  getting_started.ipynb
