[tool.poetry]
name = "autobench"
version = "0.1.0"
description = ""
authors = ["Andrew Reed <andrew.reed.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.23.4"
datasets = "^2.20.0"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
