[tool.poetry]
name = "autobench"
version = "0.1.0"
description = ""
authors = ["Andrew Reed <andrew.reed.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.25.0"
datasets = "^2.20.0"
jinja2 = "^3.1.4"
loguru = "^0.7.2"
pandas = "^2.2.2"
tqdm = "^4.66.4"
python-dotenv = "^1.0.0"
matplotlib = "^3.9.2"
tenacity = "^9.0.0"
gradio = "^4.44.0"
transformers = "^4.45.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
